# contract_wasm_vm

vote_poll_contract/: Cargo.toml
vote_poll_contract/src/: lib.rs
wasm_contract_sglk/: Cargo.toml
wasm_contract_sglk/src/: main.rs
