[package]
name = "vote_poll_contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"

[lib]
crate-type = ["cdylib"]